--- a/.env
+++ b/.env
@@ -35,5 +35,5 @@ DATABASE_URL=mysql://khady:khady@127.0.0.1:3306/transfert?serverVersion=5.7
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=5b3001c0007d4de3ddeba3c9668cdd2a
+JWT_PASSPHRASE=sarr
 ###< lexik/jwt-authentication-bundle ###
