--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,7 +4,11 @@ security:
             algorithm: bcrypt
 
     role_hierarchy:    
-        ROLE_ADMIN: ROLE_USER
+            ROLE_PARTENAIRE:     [ROLE_USER]
+            ROLE_CAISSIER:      [ROLE_PARTENAIRE]
+            ROLE_ADMIN:         [ROLE_CAISSIER]
+            ROLE_SUPER_ADMIN:    [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+
             
     providers:
         entity_provider:
@@ -24,6 +28,7 @@ security:
                 check_path: /api/login_check
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
+            user_checker: App\Security\UserEnableChecker
 
         register:
             pattern:  ^/api/register
